--- a/app/views/comments/update.js.erb
+++ b/app/views/comments/update.js.erb
@@ -1,1 +1,6 @@
-console.log("howdy")
+$("#<%= dom_id(@comment.photo) %>_<%= dom_id(@comment) %>_form").replaceWith("<%= j(render @comment) %>");
+
+$("#<%= dom_id(@comment.photo) %>_<%= dom_id(@comment) %>_form").after("<p>test</p>");
+
+
+
